# marathonic

./: .gitignore  README.md  city.csv  crawl.ipynb  crawl.py  index.html  pyproject.toml  race_export.csv  race_list_2025.csv
account/templates/account/: index.html
backend/: crawl.py  crawls.py
backend/config/: urls.py
backend/profiles/: models.py  urls.py
backend/profiles/migrations/: 0003_customuser_race.py
backend/race/: models.py  services.py
backend/race/views/: race_views.py
backend/templates/: base.html
config/: settings.py  urls.py
crawl/: crawl copy.ipynb
css/: style.css
frontend/: package-lock.json  package.json  vite.config.ts
profiles/: admin.py  manager.py  models.py  urls.py  views.py
profiles/migrations/: 0001_initial.py  0002_alter_customuser_options_alter_customuser_table.py  0004_alter_customuser_email.py  0005_alter_customuser_managers.py
race/: filters.py  models.py  services.py  urls.py  views.py
race/management/commands/: seed_race_list.py
race/migrations/: 0001_initial.py  0002_alter_coursetype_code.py
race/templates/race/: _race_list.html  index.html  my_race.html  race.html  race_list.html  race_modal.html
race/views/: myrace_views.py  race_views.py
react_app/: .gitignore  package-lock.json  package.json  vite.config.ts
react_app/src/components/: MainFilter.tsx  RaceList.tsx
react_app/src/entries/: race.tsx
repo/profiles/: admin.py  apps.py  models.py  urls.py
repo/race/: apps.py  filters.py  serializers.py  services.py  urls.py
repo/race/migrations/: 0003_race_city.py  0004_alter_race_city.py
repo/shoes/: apps.py
static/css/: common.css  home.css
templates/: base.html
(+21 files in other folders)
