[tool.poetry]
name = "marathonic"
version = "0.1.0"
description = ""
authors = ["Blake Jeong <jmchan2432@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2"
django-debug-toolbar = "^5.2.0"
django-allauth = {extras = ["socialaccount"], version = "^65.8.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
